--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           </select>
         </fieldset>
 
-        <label for="comments">Other Comments?</label>
+        <label for="comments">Other Comments?</label><br>
         <textarea cols="30" rows="10" name="comments" id="comments"></textarea>
 
 <button type="submit">Submit</button>        
