--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </fieldset>
 
         <label for="comments">Other Comments?</label><br>
-        <textarea cols="30" rows="10" name="comments" id="comments"></textarea>
+        <textarea cols="30" rows="10" name="comments" id="comments"></textarea><br>
 
 <button type="submit">Submit</button>        
       </form>
